# tvim

Backend/: readme.txt
Backend/vim_contract/: CMakeLists.txt  structures.hpp  vim_contract.abi  vim_contract.cpp  vim_contract.hpp
Backend/vim_plugin/: CMakeLists.txt  vim_plugin.cpp
Backend/vim_plugin/include/eosio/vim_plugin/: vim_plugin.hpp
Frontend/: .gitignore  delete_obj_bin.bat  readme.txt
Frontend/TVim.Client/: TVim.Client.sln
Frontend/TVim.Client/TVim.Client/: HttpManager.cs  InstagramToTvimAdapter.cs  TVim.Client.csproj
Frontend/TVim.Client/TVim.Client/Activity/: MainActivity.cs
Frontend/TVim.Client/TVim.Client/Adapters/: FeedAdapter.cs  PostAdapter.cs
Frontend/TVim.Client/TVim.Client/Assets/: DebugAsset.txt.template
Frontend/TVim.Client/TVim.Client/Helpers/: AssetHelper.cs
Frontend/TVim.Client/TVim.Client/Models/: CreatePostArgs.cs  DebugAsset.cs  OperationResult.cs  Post.cs
Frontend/TVim.Client/TVim.Client/Models/Errors/: ErrorBase.cs  ServerError.cs
Frontend/TVim.Client/TVim.Client/Models/Stub/: MediaModel.cs  UploadMediaModel.cs
Frontend/TVim.Client/TVim.Client/Properties/: AndroidManifest.xml  AssemblyInfo.cs
Frontend/TVim.Client/TVim.Client/Resources/: Resource.Designer.cs
Frontend/TVim.Client/TVim.Client/Resources/layout/: activity_main.axml  lyt_post_item.axml
Frontend/TVim.Client/TVim.Client/Resources/values/: Strings.xml
